Implementado metodo para construção de arvore binaria a partir de uma lista